# libwinmedia

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  WinMediaLib.cpp  libwinmedia.cpp  libwinmedia.rc
.github/workflows/: build_dll.yml  ci.yml
Examples/: .gitignore  Player.cpp
examples/: Music.M4A  frame_extractor.cpp  nativecontrols.cpp  player.cpp  player.manifest  tags.cpp
flutter/: CHANGELOG.md  README.md  pubspec.yaml
flutter/example/: README.md  pubspec.yaml
flutter/example/lib/: main.dart
flutter/example/linux/: CMakeLists.txt  my_application.cc
flutter/example/linux/flutter/: generated_plugin_registrant.cc
flutter/example/windows/: CMakeLists.txt
flutter/example/windows/flutter/: generated_plugin_registrant.cc
flutter/example/windows/runner/: Runner.rc  main.cpp
flutter/lib/: libwinmedia.dart
flutter/lib/src/: internal.dart  media.dart  player.dart  utils.dart
flutter/linux/: CMakeLists.txt  libwinmedia_plugin.cc
flutter/linux/include/libwinmedia/: libwinmedia_plugin.h
flutter/windows/: CMakeLists.txt  libwinmedia_plugin.cpp
flutter/windows/include/libwinmedia/: libwinmedia_plugin.h
include/: Internal.hpp  LibWinMedia.hpp  Media.hpp  NativeControls.hpp  Player.hpp  Tags.hpp  WinMediaLib.hpp  internal.hpp  libwinmedia.hpp  media.hpp  nativecontrols.hpp  player.hpp  tags.hpp
linux/: player.hpp  utils.hpp
linux/example/: main.cpp
linux/example/libwinmedia_flutter/: README.md  pubspec.yaml
linux/example/libwinmedia_flutter/lib/: main.dart
linux/example/libwinmedia_flutter/linux/: CMakeLists.txt  my_application.cc
